--- a/style.css
+++ b/style.css
@@ -1,7 +1,13 @@
-.header {
-	top:20px;
+.header, footer {
+	background-color: #4f5664;
 }
 
-.main {
-	padding-top:100px;
-}
+body {
+	font-size: 18px;
+	margin: 0;
+	padding: 0;
+	min-height: 100vh;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+  }
