--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ body {
   .nav-link {
   color: azure;
   line-height: 50px;
-  transition: 0.3s;
+  transition: 0.5s;
   text-decoration: none;
   padding: 0 20px;
 }
@@ -61,18 +61,14 @@ body {
   }
 
   .footer {
-	min-height: 80px;
-	padding: 15px;
-	margin-top: 50px;
 	background-color: #4f5664;
-	display: flex;
-	justify-content: space-around;
-	align-items: center;
   }
 
-  .footerContainer {
+  .footer-container {
+	min-height: 80px;
+	background-color: #4f5664;
 	display: flex;
-	justify-content: space-around;
+	justify-content: space-between;
 	align-items: center;
   }
 
